@@ -3,6 +3,7 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
+- narrowing in namespaces.factor
 - docs: no jEditLauncher
 - indent folding: indent triangle not repainted
 - sidekick out of memory error!
